--- a/index.html
+++ b/index.html
@@ -6,16 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
 
-    <canvas></canvas>
-    <button class="start">Start</button>
-    <button class="stop">Stop</button>
-    <button class="step">Step</button>
+    <h1>Welcome to the Game Of Life!</h1>
+    <div>
+        <canvas class=""></canvas>
+    </div>
 
+    <div class="buttons">
+
+        <button class="start btn btn-primary">Start</button>
+        <button class="stop btn btn-danger">Stop</button>
+        <button class="step btn btn-secondary">Step</button>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
