did setInterval, working good

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
     <div class="buttons">
 
-        <button class="start btn btn-primary">Start</button>
-        <button class="stop btn btn-danger">Stop</button>
-        <button class="step btn btn-secondary">Step</button>
+        <button class="startStop btn btn-primary btn-lg">Play</button>
+        <button class="step btn btn-secondary btn-lg">Step</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
