clear button, speed up / slow down

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 
     <div class="buttons">
 
-        <button class="startStop btn btn-primary btn-lg">Play</button>
-        <button class="step btn btn-secondary btn-lg">Step</button>
+        <button class="start-stop btn btn-success btn-lg">Play</button>
+        <button class="step btn btn-primary btn-lg">Step</button>
+        <button class="clear btn btn-dark btn-lg">Clear</button>
+        <button class="speed btn btn-secondary btn-lg">Speed up</button>
+        <button class="slow btn btn-secondary btn-lg">Slow down</button>
+        
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
