save/load pattern

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <button class="clear btn btn-dark btn-lg">Clear</button>
         <button class="speed btn btn-secondary btn-lg">Speed up</button>
         <button class="slow btn btn-secondary btn-lg">Slow down</button>
+        <button class="save btn btn-warning btn-lg">Save pattern</button>
+        <button class="load btn btn-info btn-lg">Load pattern</button>
+
         
     </div>
 
